heuristics_discovery/logs/Ibrahim_log_7_19.txt
2024-07-19 23:30:04.431106: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.
To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.
Traceback (most recent call last):
  File "/home/ibrahimoguz/funsearch/funsearch_main.py", line 338, in <module>
    funsearch.main(
  File "/home/ibrahimoguz/funsearch/implementation/funsearch.py", line 67, in main
    function_to_evolve, function_to_run = _extract_function_names(specification)
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ibrahimoguz/funsearch/implementation/funsearch.py", line 42, in _extract_function_names
    run_functions = list(code_manipulation.yield_decorated(specification, 'funsearch', 'run'))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ibrahimoguz/funsearch/implementation/code_manipulation.py", line 280, in yield_decorated
    tree = ast.parse(code)
           ^^^^^^^^^^^^^^^
  File "/home/ibrahimoguz/env/fs_env_new/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    """
IndentationError: unexpected indent
